# canvas-faker

./: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.datasette  README.md  datasette-metadata.json  docker-compose.yml  nvai-frontend-2-datashape-schema.md  pyproject.toml  requirements-dag.txt
canvas_faker/: __init__.py  cli.py  config.py  generate.py  ids.py  messiness.py  providers.py  schema.py
canvas_faker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
canvas_faker/generators/: canvas.py  canvas_logs.py  catalog.py  new_quizzes.py
canvas_faker/writers/: postgres_writer.py  sqlite_writer.py
dags/sql/: 00_schemas.sql
tests/: test_integrity.py
