[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-faker"
version = "0.1.0"
description = "A Faker library for Canvas Data 2 (CD2) — generates realistic, messy datasets matching the Canvas LMS schema."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Canvas Faker Contributors"}
]
dependencies = [
    "faker>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
postgres = [
    "psycopg2-binary>=2.9",
]

[project.scripts]
canvas-faker = "canvas_faker.cli:main"

[tool.setuptools]
packages = ["canvas_faker", "canvas_faker.generators", "canvas_faker.writers", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
